--- a/c00_insiders_clustering.ipynb
+++ b/c00_insiders_clustering.ipynb
@@ -176,21 +176,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-17T02:45:59.058773Z",
-     "start_time": "2021-04-17T02:45:59.055573Z"
+     "end_time": "2021-04-18T02:58:46.988587Z",
+     "start_time": "2021-04-18T02:58:46.159522Z"
     },
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-32ae4ea8f13b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmatplotlib\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mHTML\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcluster\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "from matplotlib import pyplot as plt\n",
-    "from IPython.display import HTML"
+    "from IPython.display import HTML\n",
+    "from sklearn import cluster as c"
    ]
   },
   {
@@ -205,11 +218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-17T03:14:48.524663Z",
-     "start_time": "2021-04-17T03:14:48.500328Z"
+     "end_time": "2021-04-18T02:45:19.105581Z",
+     "start_time": "2021-04-18T02:45:19.085246Z"
     },
     "hidden": true
    },
@@ -265,11 +278,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-17T02:45:59.860367Z",
-     "start_time": "2021-04-17T02:45:59.088757Z"
+     "end_time": "2021-04-18T02:45:19.810526Z",
+     "start_time": "2021-04-18T02:45:19.109242Z"
     },
     "hidden": true
    },
@@ -280,11 +293,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-17T02:45:59.933795Z",
-     "start_time": "2021-04-17T02:45:59.862076Z"
+     "end_time": "2021-04-18T02:45:19.857472Z",
+     "start_time": "2021-04-18T02:45:19.813211Z"
     },
     "hidden": true
    },
@@ -296,22 +309,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 1.0 Data Description"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-17T02:45:59.973036Z",
-     "start_time": "2021-04-17T02:45:59.937796Z"
-    },
-    "hidden": true
+     "end_time": "2021-04-18T02:45:19.901378Z",
+     "start_time": "2021-04-18T02:45:19.861287Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -321,8 +331,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## 1.1 Rename columns"
@@ -330,11 +339,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-17T02:45:59.981510Z",
-     "start_time": "2021-04-17T02:45:59.976171Z"
+     "end_time": "2021-04-18T02:45:19.906557Z",
+     "start_time": "2021-04-18T02:45:19.903261Z"
     },
     "hidden": true
    },
@@ -346,8 +355,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## 1.2 Data Dimensions"
@@ -355,11 +363,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-17T02:46:00.000601Z",
-     "start_time": "2021-04-17T02:45:59.989922Z"
+     "end_time": "2021-04-18T02:45:19.912640Z",
+     "start_time": "2021-04-18T02:45:19.908730Z"
     },
     "hidden": true
    },
@@ -370,7 +378,7 @@
        "(541909, 8)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,8 +390,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## 1.3 Data types"
@@ -391,11 +398,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-17T02:46:00.020255Z",
-     "start_time": "2021-04-17T02:46:00.005779Z"
+     "end_time": "2021-04-18T02:45:19.930185Z",
+     "start_time": "2021-04-18T02:45:19.915051Z"
     },
     "hidden": true
    },
@@ -414,7 +421,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,8 +433,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## 1.4 Check Na"
@@ -435,11 +441,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-17T02:50:48.925759Z",
-     "start_time": "2021-04-17T02:50:48.690559Z"
+     "end_time": "2021-04-18T02:45:20.072454Z",
+     "start_time": "2021-04-18T02:45:19.935539Z"
     },
     "hidden": true
    },
@@ -458,7 +464,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,8 +476,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## 1.5 Replace Na"
@@ -479,11 +484,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-17T02:53:19.637677Z",
-     "start_time": "2021-04-17T02:53:19.514535Z"
+     "end_time": "2021-04-18T02:45:20.177519Z",
+     "start_time": "2021-04-18T02:45:20.077380Z"
     },
     "hidden": true
    },
@@ -496,8 +501,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## 1.6 Change Types"
@@ -505,11 +509,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-17T03:03:32.112859Z",
-     "start_time": "2021-04-17T03:03:32.074076Z"
+     "end_time": "2021-04-18T02:45:20.256266Z",
+     "start_time": "2021-04-18T02:45:20.179371Z"
     },
     "hidden": true
    },
@@ -525,8 +529,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## 1.7 Descriptive Statistics "
@@ -543,19 +546,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# 2.0 Feature Engineering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 56,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-17T03:34:36.172175Z",
-     "start_time": "2021-04-17T03:34:36.142154Z"
-    }
+     "end_time": "2021-04-18T02:45:20.287030Z",
+     "start_time": "2021-04-18T02:45:20.259899Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -564,19 +570,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "## 2.1 Feature Creation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 57,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-17T03:34:37.716435Z",
-     "start_time": "2021-04-17T03:34:37.684915Z"
-    }
+     "end_time": "2021-04-18T02:45:20.321120Z",
+     "start_time": "2021-04-18T02:45:20.290065Z"
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -637,25 +647,25 @@
        "4        15100"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_ref = df2.drop(['invoice_no','stock_code','description','quantity',\n",
-    "                   'invoice_date','unit_price','country'], axis=1).drop_duplicates(ignore_index=True)\n",
-    "df_ref.head()"
+    "                   'invoice_date','unit_price','country'], axis=1).drop_duplicates(ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 58,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-17T03:34:39.716751Z",
-     "start_time": "2021-04-17T03:34:39.591670Z"
-    }
+     "end_time": "2021-04-18T02:45:20.461402Z",
+     "start_time": "2021-04-18T02:45:20.324403Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -669,7 +679,7 @@
     "# Recency - last day purchase\n",
     "df_recency = df2[['customer_id','invoice_date']].groupby('customer_id').max().reset_index()\n",
     "df_recency['recency_days'] = (df2['invoice_date'].max() - df_recency['invoice_date']).dt.days\n",
-    "df_recency = df_recency[['customer_id','invoice_date']].copy()\n",
+    "df_recency = df_recency[['customer_id','recency_days']].copy()\n",
     "df_ref = pd.merge(df_ref, df_recency, on='customer_id', how='left')\n",
     "\n",
     "# Frequency\n",
@@ -680,6 +690,223 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# 3.0 Variable Filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-18T02:45:20.469454Z",
+     "start_time": "2021-04-18T02:45:20.463667Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "df3 = df_ref.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# 4.0  EDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-18T02:45:20.480971Z",
+     "start_time": "2021-04-18T02:45:20.471775Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "df4 = df3.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# 5.0 Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-18T02:45:20.488648Z",
+     "start_time": "2021-04-18T02:45:20.483294Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "df5 = df4.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# 6.0 Feature Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-18T02:45:20.496617Z",
+     "start_time": "2021-04-18T02:45:20.490584Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "df6 = df5.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7.0 Hyperparameter Fine_Tunning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-18T02:48:04.155668Z",
+     "start_time": "2021-04-18T02:48:04.150861Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "X = df6.drop(columns=['customer_id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-18T02:50:03.729805Z",
+     "start_time": "2021-04-18T02:50:03.723795Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "clusters = [2,3,4,5,6]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-18T02:48:11.934933Z",
+     "start_time": "2021-04-18T02:48:11.911519Z"
+    }
+   },
+   "source": [
+    "## 7.1 Within Cluster Sum of Square (WSS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wss = []\n",
+    "\n",
+    "for k in clusters:\n",
+    "    # model definiton\n",
+    "    kmeans = c.Kmeans(init='random', n_clusters=k, n_init=10, max_iter=300, random_state=42 )\n",
+    "    \n",
+    "    # model training\n",
+    "    kmeans.fit(X)\n",
+    "    \n",
+    "    # validation\n",
+    "    wss.append(kmeans.inertia_)\n",
+    "    \n",
+    "# plot wss\n",
+    "plt.pltlot(clusters, wss, linestyle='--', max_iterrker='o', color='k')\n",
+    "plt.xlabel('K');\n",
+    "plt.ylabel('WSS');\n",
+    "plt.title('WSS vs K');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from yellowbrick.cluster import KElbowVisualizer\n",
+    "\n",
+    "kmeans = KElbowVisualizer(c.Kmeans(), k=clusters, timing=False)\n",
+    "kmeans.fit(X)\n",
+    "kmeans.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.2 Silhouette Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kmeans = KElbowVisualizer(c.Kmeans(), k=clusters, metric='silhouette', timing=False)\n",
+    "kmeans.fit(X)\n",
+    "kmeans.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -690,41 +917,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3.0 Variable Filtering"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 4.0  EDA"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 5.0 Data Preparation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 6.0 Feature Selection"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 7.0 Hyperparameter Fine_Tunning"
-   ]
   },
   {
    "cell_type": "markdown",
